Changelog

4/11/2011
Revise clause-splitting and add first stages of a more transparent way of handling cognate delineation.

18/10/2011
Remove tense constraint in es_lookup.

7/10/2011
Sort files into subdirs based on most-frequent language.

5/10/2011
Generate a preamble for the typeset output from the chat file header.

4/10/2011
Generate tex file for John Frampton's revised ExPex glossing package.

27/09/2011
Auto-select most frequent language in a file based on the file header's @Languages line (in cgimport.php).

14/09/2011
Generate tex file for Natalie Weber's multiline glossing package (xscribe).
Add empty %eng tier.
Find and correct typos globally.
Generate csv version of trigram output.

24/08/2011
Add empty %eng tier.
Make global changes to all files in the corpus.
Adjust import to allow for CLAN end-terminators like +/., +..., etc.

05/08/2011
Generate a word-index for the entire corpus.
Gather unknown words in individual files.
Pick trigrams out of the corpus.

18/07/2011
Revise import process to handle Patagonia corpus.

14/07/2011
Revise preparation and import process to handle Miami corpus - easier workflow.

28/06/2011
Fix bugs in mc collocation stuff, and improve workflow (more to be done).

27/6/2011
Select and handle noun+adjective collocations.

25/6/2011
File prep now fixes typos where no space precedes the period.
Initial angle bracket no longer eats pre-backtrack words when importing in MOR mode.