@@ -1,5 +1,8 @@
 Changelog
 
+6/11/2011
+New method of tracking codeswitches due to triggers.
+
 4/11/2011
 Revise clause-splitting and add first stages of a more transparent way of handling cognate delineation.
 
